--- a/index.html
+++ b/index.html
@@ -5,15 +5,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./asstes/styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Vazirmatn:wght@100..900&display=swap"
+        rel="stylesheet">
     <title>Etalon</title>
 </head>
 
 <body>
-    <div class="container">
+    <section class="header">
+        <div class="container">
+            <div class="nav">
+                <h1>Etalon</h1>
+                <nav>
+                    <ul>
+                        <li class="menu"><a href="#">Home</a></li>
+                        <li class="menu"><a href="#">Store</a></li>
+                        <li class="menu"><a href="#">New</a></li>
+                        <li class="menu"><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                <img src="./asstes/images/basket.png" alt="">
+            </div>
 
+            <div class="hero">
+                <div class="left">
+                    <p><i>2022</i></p>
+                    <h2>Autumn Jackets</h2>
+                    <p>Autumn Sale / Up to 50% OFF</p>
+                    <div class="btn-wrapper"><a href="#">Open Collection</a></div>
+                </div>
+                <div class="right">
+                    <div class="inside">
+                        <!-- <div class="bar"> -->
+                            <p>$299</p>
+                            <div>40% OFF</div>
+                            <div></div>
+                            <div></div>
+                            <img src="./asstes/images/man.png" title="">
+                        <!-- </div> -->
+                    </div>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
 
-       
         </div>
+    </section>
 </body>
 
 </html>
