--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <div class="right">
                     <div class="inside">
                         <!-- <div class="bar"> -->
-                            <p>$299</p>
-                            <div>40% OFF</div>
-                            <div></div>
-                            <div></div>
-                            <img src="./asstes/images/man.png" title="">
+                        <p>$299</p>
+                        <div>40% OFF</div>
+                        <div></div>
+                        <div></div>
+                        <img src="./asstes/images/man.png" title="">
                         <!-- </div> -->
                     </div>
                     <ul>
@@ -56,6 +56,151 @@
 
         </div>
     </section>
+    <section class="brands">
+        <div class="container">
+            <ul>
+                <li><img src="./asstes/images/Adidas-group-logo-fr.svg" alt=""></li>
+                <li><img src="./asstes/images/prada.svg" alt=""></li>
+                <li><img src="./asstes/images/nike.svg" alt=""></li>
+                <li><img src="./asstes/images/HM.svg" alt=""></li>
+                <li><img src="./asstes/images/gucci.svg" alt=""></li>
+                <li><img src="./asstes/images/blk.svg" alt=""></li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="new-collection">
+        <div class="container">
+            <h3>New Collection</h3>
+            <div class="collection">
+                <div class="jacket">
+                    <p>Men’s Jacket Collection</p>
+                    <img src="./asstes/images/menjacket.png" alt="">
+                </div>
+                <div class="sunglasses">
+                    <img src="./asstes/images/mensunglasses.png" alt="">
+                    <div>
+                        <p>Men’s Sunglasses Collection</p>
+                        <p>40% OFF</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="best-sellers">
+        <div class="container">
+            <h3>Best Sellers</h3>
+
+            <ul class="product">
+                <li class="col">
+                    <div class="item">
+                        <div class="show">
+                            <div class="heart">
+                                <p></p>
+                                <img src="./asstes/images/heart.svg" alt="" />
+                            </div>
+                            <picture>
+                                <source media="(min-width: 700px)" srcset="./asstes/images/bag-m.png" />
+                                <img src="./asstes/images/bag.png" alt="" />
+                            </picture>
+                        </div>
+                        <div class="price">
+                            <div>
+                                <p>Fjallraven Backpack</p>
+                                <p>$109.95</p>
+                            </div>
+                            <picture>
+                                <source media="(min-width: 700px)" srcset="./asstes/images/shopping-cart-m.svg" />
+                                <img src="./asstes/images/shopping-cart.svg" alt="" />
+                            </picture>
+                        </div>
+                    </div>
+                </li>
+
+
+
+                <li class="col">
+                    <div class="item">
+                        <div class="show">
+                            <div class="heart">
+                                <p></p>
+                                <img src="./asstes/images/heart.svg" alt="" />
+                            </div>
+                            <picture>
+                                <source media="(min-width: 700px)" srcset="./asstes/images/jacket.png" />
+                                <img src="./asstes/images/jacket.png" alt="" />
+                            </picture>
+                        </div>
+                        <div class="price">
+                            <div>
+                                <p>Fjallraven Backpack</p>
+                                <p>$109.95</p>
+                            </div>
+                            <picture>
+                                <source media="(min-width: 700px)" srcset="./asstes/images/shopping-cart-m.svg" />
+                                <img src="./asstes/images/shopping-cart.svg" alt="" />
+                            </picture>
+                        </div>
+                    </div>
+                </li>
+
+
+                <li class="col">
+                    <div class="item">
+                        <div class="show">
+                            <div class="heart">
+                                <p></p>
+                                <img src="./asstes/images/heart.svg" alt="" />
+                            </div>
+                            <picture>
+                                <source media="(min-width: 700px)" srcset="./asstes/images/tshirt.png" />
+                                <img src="./asstes/images/tshirt.png" alt="" />
+                            </picture>
+                        </div>
+                        <div class="price">
+                            <div>
+                                <p>Fjallraven Backpack</p>
+                                <p>$109.95</p>
+                            </div>
+                            <picture>
+                                <source media="(min-width: 700px)" srcset="./asstes/images/shopping-cart-m.svg" />
+                                <img src="./asstes/images/shopping-cart.svg" alt="" />
+                            </picture>
+                        </div>
+                    </div>
+                </li>
+
+
+                <li class="col">
+                    <div class="item">
+                        <div class="show">
+                            <div class="heart color">
+                                <p>-30%</p>
+                                <img src="./asstes/images/heart.svg" alt="" />
+                            </div>
+                            <picture>
+                                <source media="(min-width: 700px)" srcset="./asstes/images/sweater.png" />
+                                <img src="./asstes/images/sweater.png" alt="" />
+                            </picture>
+                        </div>
+                        <div class="price">
+                            <div>
+                                <p>Fjallraven Backpack</p>
+                                <p>$109.95</p>
+                            </div>
+                            <picture>
+                                <source media="(min-width: 700px)" srcset="./asstes/images/shopping-cart-m.svg" />
+                                <img src="./asstes/images/shopping-cart.svg" alt="" />
+                            </picture>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+
+        </div>
+    </section>
+
 </body>
 
 </html>
