--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <p><i>2022</i></p>
                     <h2>Autumn Jackets</h2>
                     <p>Autumn Sale / Up to 50% OFF</p>
-                    <div class="btn-wrapper"><a href="#">Open Collection</a></div>
+                    <div class="btn-wrapper y-btn"><a href="#">Open Collection</a></div>
                 </div>
                 <div class="right">
                     <div class="inside">
@@ -198,8 +198,56 @@
                 </li>
             </ul>
 
+            <div class="btn-wrapper b-btn"><a href="#">Load more products</a></div>
         </div>
     </section>
+
+    <footer>
+
+        <div class="container">
+            <div class="footer">
+                <div class="left">
+                    <p>70% OFF</p>
+                    <img src="./asstes/images/shoes.png" alt="" />
+                </div>
+                <div class="right">
+                    <p>Sale ends soon</p>
+                    <ul>
+                        <li>
+                            <div class="item">
+                                <p class="counter">3</p>
+                                <p class="remain">Days</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <p class="counter">23</p>
+                                <p class="remain">Hours</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <p class="counter">15</p>
+                                <p class="remain">Hours</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <p class="counter">33</p>
+                                <p class="remain">Seconds</p>
+                            </div>
+                        </li>
+                    </ul>
+
+
+                </div>
+
+
+            </div>
+        </div>
+    </footer>
+
+
 
 </body>
 
