design hero for mobile

--- a/index.html
+++ b/index.html
@@ -38,24 +38,35 @@
                 </div>
                 <div class="right">
                     <div class="inside">
-                        <p>$299</p>
-                        <div>40% OFF</div>
+                        <p class="desktop">$299</p>
+                        <div class="desktop">40% OFF</div>
                         <div></div>
                         <div></div>
-                        <img class="man" src="./asstes/images/man.png" title="">
-                        <img class="arrow-left" src="./asstes/images/arrowkey.svg" title="">
-                        <img class="arrow-right" src="./asstes/images/arrowkey-w.svg" title="">
+                        <picture>
+                            <source media="(max-width: 700px)" srcset="./asstes/images/man-m.png" />
+                            <img class="man" src="./asstes/images/man.png" alt="" />
+                        </picture>
+                        <img class="arrow-left desktop" src="./asstes/images/arrowkey.svg" title="">
+                        <img class="arrow-right desktop" src="./asstes/images/arrowkey-w.svg" title="">
                     </div>
-                    <ul>
-                        <li class="white-bullet">
-                            <!-- <input id="switch" type="checkbox" />
-                            <label for="switch">fdgdfgf</label> -->
-                        </li>
-                        <li class="gray-bullet"></li>
-                        <li class="gray-bullet"></li>
-                    </ul>
+
                 </div>
+                <ul>
+                    <li class="white-bullet">
+                        <!-- <input id="switch" type="checkbox" />
+                            <label for="switch">fdgdfgf</label> -->
+                    </li>
+                    <li class="gray-bullet"></li>
+                    <li class="gray-bullet"></li>
+                </ul>
             </div>
+                <div class="menubar mobile">
+                    <img  src="./asstes/images/phone.svg" title="">
+                    <img  src="./asstes/images/medal.svg" title="">
+                    <img  src="./asstes/images/home.svg" title="">
+                    <img  src="./asstes/images/shop.svg" title="">
+                    <img  src="./asstes/images/basket.svg" title="">
+                </div>
 
         </div>
     </section>
@@ -211,7 +222,7 @@
         <div class="container">
             <div class="footer">
                 <div class="left">
-                    <p >70% OFF</p>
+                    <p>70% OFF</p>
                     <img src="./asstes/images/shoes.png" alt="" />
                 </div>
                 <div class="right">
