design barands for mobilr

--- a/index.html
+++ b/index.html
@@ -60,25 +60,55 @@
                     <li class="gray-bullet"></li>
                 </ul>
             </div>
-                <div class="menubar mobile">
-                    <img  src="./asstes/images/phone.svg" title="">
-                    <img  src="./asstes/images/medal.svg" title="">
-                    <img  src="./asstes/images/home.svg" title="">
-                    <img  src="./asstes/images/shop.svg" title="">
-                    <img  src="./asstes/images/basket.svg" title="">
-                </div>
+            <div class="menubar mobile">
+                <img src="./asstes/images/phone.svg" title="">
+                <img src="./asstes/images/medal.svg" title="">
+                <img src="./asstes/images/home.svg" title="">
+                <img src="./asstes/images/shop.svg" title="">
+                <img src="./asstes/images/basket.svg" title="">
+            </div>
 
         </div>
     </section>
     <section class="brands">
         <div class="container">
             <ul>
-                <li><img src="./asstes/images/Adidas-group-logo-fr.svg" alt=""></li>
-                <li><img src="./asstes/images/prada.svg" alt=""></li>
-                <li><img src="./asstes/images/nike.svg" alt=""></li>
-                <li><img src="./asstes/images/HM.svg" alt=""></li>
-                <li><img src="./asstes/images/gucci.svg" alt=""></li>
-                <li><img src="./asstes/images/blk.svg" alt=""></li>
+                <li>
+                    <picture>
+                        <source media="(max-width: 700px)" srcset="./asstes/images/Adidas-m.svg" />
+                        <img src="./asstes/images/Adidas-group-logo-fr.svg" alt="">
+                    </picture>
+                </li>
+                <li>
+                    <picture>
+                        <source media="(max-width: 700px)" srcset="./asstes/images/prada-m.svg" />
+                        <img src="./asstes/images/prada.svg" alt="">
+                    </picture>
+                </li>
+                <li>
+                    <picture>
+                        <source media="(max-width: 700px)" srcset="./asstes/images/nike-m.svg" />
+                        <img src="./asstes/images/nike.svg" alt="">
+                    </picture>
+                </li>
+                <li>
+                    <picture>
+                        <source media="(max-width: 700px)" srcset="./asstes/images/HM-m.svg" />
+                        <img src="./asstes/images/HM.svg" alt="">
+                    </picture>
+                </li>
+                <li>
+                    <picture>
+                        <source media="(max-width: 700px)" srcset="./asstes/images/gucci-m.svg" />
+                        <img src="./asstes/images/gucci.svg" alt="">
+                    </picture>
+                </li>
+                <li>
+                    <picture>
+                        <source media="(max-width: 700px)" srcset="./asstes/images/blk-m.svg" />
+                        <img src="./asstes/images/blk.svg" alt="">
+                    </picture>
+                </li>
             </ul>
         </div>
     </section>
@@ -90,14 +120,20 @@
                 <div class="jacket">
                     <p>Men’s Jacket Collection</p>
                     <div class="btn-wrapper b-btn"><a href="#">Discover Now</a></div>
-                    <img src="./asstes/images/menjacket.png" alt="">
+                    <picture>
+                        <source media="(max-width: 700px)" srcset="./asstes/images/menjacket-m.png" />
+                        <img src="./asstes/images/menjacket.png" alt="">
+                    </picture>
                 </div>
                 <div class="sunglasses">
-                    <div class="btn-wrapper b-btn"><a href="#">Discover Now</a></div>
-                    <img src="./asstes/images/mensunglasses.png" alt="">
+                    <picture>
+                        <source media="(max-width: 700px)" srcset="./asstes/images/mensunglasses-m.png" />
+                        <img src="./asstes/images/mensunglasses.png" alt="">
+                    </picture>
                     <div>
                         <p>Men’s Sunglasses Collection</p>
                         <p class="off">40% OFF</p>
+                        <div class="btn-wrapper b-btn"><a href="#">Discover Now</a></div>
                     </div>
                 </div>
             </div>
