--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                     <div>
                         <p>Men’s Sunglasses Collection</p>
                         <p class="off">40% OFF</p>
-                        <div class="btn-wrapper b-btn"><a href="#">Discover Now</a></div>
                     </div>
+                    <div class="btn-wrapper b-btn"><a href="#">Discover Now</a></div>
                 </div>
             </div>
         </div>
@@ -250,7 +250,7 @@
                 </li>
             </ul>
 
-            <div class="btn-wrapper b-btn"><a href="#">Load more products</a></div>
+            <div class="btn-wrapper b-btn desktop"><a href="#">Load more products</a></div>
         </div>
     </section>
 
@@ -294,6 +294,9 @@
         </div>
     </footer>
 
+
+    <div class="foo">dfslfjlksdjfd d</div>
+    <br>
 </body>
 
 </html>
