--- a/index.html
+++ b/index.html
@@ -144,111 +144,117 @@
         <div class="container">
             <h3>Best Sellers</h3>
 
-            <ul class="product">
-                <li class="col">
-                    <div class="item">
-                        <div class="products">
-                            <div class="heart">
-                                <p></p>
-                                <img src="./asstes/images/heart.svg" alt="" />
+            <div class="product-wrapper">
+                <ul class="product">
+                    <li class="col">
+                        <div class="item">
+                            <div class="products">
+                                <div class="heart">
+                                    <p></p>
+                                    <img src="./asstes/images/heart.svg" alt="" />
+                                </div>
+                                <picture>
+                                    <source media="(min-width: 700px)" srcset="./asstes/images/bag-m.png" />
+                                    <img src="./asstes/images/bag.png" alt="" />
+                                </picture>
                             </div>
-                            <picture>
-                                <source media="(min-width: 700px)" srcset="./asstes/images/bag-m.png" />
-                                <img src="./asstes/images/bag.png" alt="" />
-                            </picture>
-                        </div>
-                        <div class="name-price">
-                            <div>
-                                <p class="name">Fjallraven Backpack</p>
-                                <p class="price">$109.95</p>
+                            <div class="name-price">
+                                <div>
+                                    <p class="name">Fjallraven Backpack</p>
+                                    <p class="price">$109.95</p>
+                                </div>
+                                <picture>
+                                    <source media="(min-width: 700px)" srcset="./asstes/images/shopping-cart-m.svg" />
+                                    <img src="./asstes/images/shopping-cart.svg" alt="" />
+                                </picture>
                             </div>
-                            <picture>
-                                <source media="(min-width: 700px)" srcset="./asstes/images/shopping-cart-m.svg" />
-                                <img src="./asstes/images/shopping-cart.svg" alt="" />
-                            </picture>
                         </div>
-                    </div>
-                </li>
+                    </li>
 
 
 
-                <li class="col">
-                    <div class="item">
-                        <div class="products">
-                            <div class="heart">
-                                <p></p>
-                                <img src="./asstes/images/heart.svg" alt="" />
+                    <li class="col">
+                        <div class="item">
+                            <div class="products">
+                                <div class="heart">
+                                    <p></p>
+                                    <img src="./asstes/images/heart.svg" alt="" />
+                                </div>
+                                <picture>
+                                    <source media="(min-width: 700px)" srcset="./asstes/images/jacket.png" />
+                                    <img src="./asstes/images/jacket.png" alt="" />
+                                </picture>
                             </div>
-                            <picture>
-                                <source media="(min-width: 700px)" srcset="./asstes/images/jacket.png" />
-                                <img src="./asstes/images/jacket.png" alt="" />
-                            </picture>
-                        </div>
-                        <div class="name-price">
-                            <div>
-                                <p class="name">Fjallraven Backpack</p>
-                                <p class="price">$109.95</p>
+                            <div class="name-price">
+                                <div>
+                                    <p class="name">Mens Cotton Jacket</p>
+                                    <p class="price">$55.99</p>
+                                </div>
+                                <picture>
+                                    <source media="(min-width: 700px)" srcset="./asstes/images/shopping-cart-m.svg" />
+                                    <img src="./asstes/images/shopping-cart.svg" alt="" />
+                                </picture>
                             </div>
-                            <picture>
-                                <source media="(min-width: 700px)" srcset="./asstes/images/shopping-cart-m.svg" />
-                                <img src="./asstes/images/shopping-cart.svg" alt="" />
-                            </picture>
                         </div>
-                    </div>
-                </li>
+                    </li>
 
 
-                <li class="col">
-                    <div class="item">
-                        <div class="products">
-                            <div class="heart">
-                                <p></p>
-                                <img src="./asstes/images/heart.svg" alt="" />
+                    <li class="col">
+                        <div class="item">
+                            <div class="products">
+                                <div class="heart">
+                                    <p></p>
+                                    <img src="./asstes/images/heart.svg" alt="" />
+                                </div>
+                                <picture>
+                                    <source media="(min-width: 700px)" srcset="./asstes/images/tshirt.png" />
+                                    <img src="./asstes/images/tshirt.png" alt="" />
+                                </picture>
                             </div>
-                            <picture>
-                                <source media="(min-width: 700px)" srcset="./asstes/images/tshirt.png" />
-                                <img src="./asstes/images/tshirt.png" alt="" />
-                            </picture>
-                        </div>
-                        <div class="name-price">
-                            <div>
-                                <p class="name">Fjallraven Backpack</p>
-                                <p class="price">$109.95</p>
+                            <div class="name-price">
+                                <div>
+                                    <p class="name">Slim Fit T-Shirts</p>
+                                    <p class="price">$22.3</p>
+                                </div>
+                                <picture>
+                                    <source media="(min-width: 700px)" srcset="./asstes/images/shopping-cart-m.svg" />
+                                    <img src="./asstes/images/shopping-cart.svg" alt="" />
+                                </picture>
                             </div>
-                            <picture>
-                                <source media="(min-width: 700px)" srcset="./asstes/images/shopping-cart-m.svg" />
-                                <img src="./asstes/images/shopping-cart.svg" alt="" />
-                            </picture>
                         </div>
-                    </div>
-                </li>
+                    </li>
 
 
-                <li class="col">
-                    <div class="item">
-                        <div class="products">
-                            <div class="heart color">
-                                <p>-30%</p>
-                                <img src="./asstes/images/heart.svg" alt="" />
+                    <li class="col">
+                        <div class="item">
+                            <div class="products">
+                                <div class="heart color">
+                                    <p>-30%</p>
+                                    <img src="./asstes/images/heart.svg" alt="" />
+                                </div>
+                                <picture>
+                                    <source media="(min-width: 700px)" srcset="./asstes/images/sweater.png" />
+                                    <img src="./asstes/images/sweater.png" alt="" />
+                                </picture>
                             </div>
-                            <picture>
-                                <source media="(min-width: 700px)" srcset="./asstes/images/sweater.png" />
-                                <img src="./asstes/images/sweater.png" alt="" />
-                            </picture>
-                        </div>
-                        <div class="name-price">
-                            <div>
-                                <p class="name">Fjallraven Backpack</p>
-                                <p class="price">$109.95</p>
+                            <div class="name-price">
+                                <div>
+                                    <p class="name">Mens Casual Slim Fit</p>
+                                    <!-- <p class="price line-through">$15.99<span>$11.25</span></p> -->
+                                    <p class="price">
+                                        <span class="old-price">$15.99</span>
+                                        <span class="new-price">$11.25</span>
+                                    </p>
+                                </div>
+                                <picture>
+                                    <source media="(min-width: 700px)" srcset="./asstes/images/shopping-cart-m.svg" />
+                                    <img src="./asstes/images/shopping-cart.svg" alt="" />
+                                </picture>
                             </div>
-                            <picture>
-                                <source media="(min-width: 700px)" srcset="./asstes/images/shopping-cart-m.svg" />
-                                <img src="./asstes/images/shopping-cart.svg" alt="" />
-                            </picture>
                         </div>
-                    </div>
-                </li>
-            </ul>
+                    </li>
+                </ul>
+            </div>
 
             <div class="btn-wrapper b-btn desktop"><a href="#">Load more products</a></div>
         </div>
@@ -257,46 +263,34 @@
     <footer>
         <div class="container">
             <div class="footer">
-                <div class="left">
-                    <p>70% OFF</p>
-                    <img src="./asstes/images/shoes.png" alt="" />
+                <div class="left desktop">
+                    <p class="desktop">70% OFF</p>
+                    <img class="desktop" src="./asstes/images/shoes.png" alt="" />
                 </div>
                 <div class="right">
                     <p>Sale ends soon</p>
                     <ul>
                         <li>
-                            <div class="item">
-                                <p class="counter">3</p>
-                                <p class="remain">Days</p>
-                            </div>
+                            <p class="counter">3</p>
+                            <p class="remain">Days</p>
                         </li>
                         <li>
-                            <div class="item">
-                                <p class="counter">23</p>
-                                <p class="remain">Hours</p>
-                            </div>
+                            <p class="counter">23</p>
+                            <p class="remain">Hours</p>
                         </li>
                         <li>
-                            <div class="item">
-                                <p class="counter">15</p>
-                                <p class="remain">Hours</p>
-                            </div>
+                            <p class="counter">15</p>
+                            <p class="remain">Hours</p>
                         </li>
                         <li>
-                            <div class="item">
-                                <p class="counter">33</p>
-                                <p class="remain">Seconds</p>
-                            </div>
+                            <p class="counter">33</p>
+                            <p class="remain">Seconds</p>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
-
-
-    <div class="foo">dfslfjlksdjfd d</div>
-    <br>
 </body>
 
 </html>
